--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "ethers": "^5.7.0",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -23,6 +28,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
   }
