--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,16 +14,20 @@
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@react-three/drei": "^9.28.3",
+    "@react-three/fiber": "^8.7.2",
     "ethers": "^5.7.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "^0.144.0",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.144.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
