--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@lit-protocol/sdk-browser": "^1.1.218",
     "@prisma/client": "^4.3.1",
     "ethers": "^5.7.0",
     "next": "12.2.5",
