implement image api using replicate-js

--- a/packages/web/.env.sample
+++ b/packages/web/.env.sample
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:3030
+REPLICATE_TOKEN=
 DATABASE_URL="postgresql://postgres:passw0rd@localhost:54322/postgres?schema=public"
