--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "replicate-js": "github:nicholascelestin/replicate-js#v0.0.6",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
