--- a/packages/web/.eslintrc.json
+++ b/packages/web/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "react/no-unknown-property": ["warn"]
+    "react/no-unknown-property": ["warn"],
+    "@next/next/no-img-element": "off",
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
