--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,12 +21,14 @@
     "@react-three/fiber": "^8.7.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ethers": "^5.7.0",
+    "immer": "^9.0.15",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "replicate-js": "github:nicholascelestin/replicate-js",
     "three": "^0.144.0",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.6.4",
+    "zustand": "4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
