--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,7 +20,9 @@
     "@react-three/drei": "^9.29.1",
     "@react-three/fiber": "^8.7.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/formidable": "^2.0.5",
     "ethers": "^5.7.0",
+    "formidable": "^2.0.1",
     "immer": "^9.0.15",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "zustand": "4.1.1"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
