--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -16,5 +16,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3"
   }
 }
