--- a/packages/web/.env.sample
+++ b/packages/web/.env.sample
@@ -2,3 +2,4 @@ REPLICATE_TOKEN=
 DATABASE_URL="postgresql://postgres:passw0rd@localhost:54322/postgres?schema=public"
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somereallysecretsecret
+NEXT_PUBLIC_ALCHEMY_API_KEY=
