--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
     "@react-three/fiber": "^8.7.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ethers": "^5.7.0",
+    "howler": "^2.2.3",
     "immer": "^9.0.15",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "zustand": "4.1.1"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.7",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
