add prisma generate as prebuild/predev

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prebuild": "prisma generate",
+    "predev": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "generate": "prisma generate",
