--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.0",
     "react-use": "^17.4.0",
     "replicate-js": "github:nicholascelestin/replicate-js",
     "siwe": "^1.1.6",
@@ -42,6 +43,7 @@
     "zustand": "4.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/howler": "^2.2.7",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
