--- a/packages/web/.env.sample
+++ b/packages/web/.env.sample
@@ -3,3 +3,5 @@ DATABASE_URL="postgresql://postgres:passw0rd@localhost:54322/postgres?schema=pub
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somereallysecretsecret
 NEXT_PUBLIC_ALCHEMY_API_KEY=
+AWS_ACCESS_ID=
+AWS_SECRET_KEY=
