--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,8 +37,8 @@
     "howler": "^2.2.3",
     "immer": "^9.0.15",
     "next": "12.2.5",
-    "nft.storage": "^7.0.0",
     "next-auth": "^4.10.3",
+    "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
@@ -47,12 +47,13 @@
     "siwe": "^1.1.6",
     "three": "^0.144.0",
     "wagmi": "^0.6.6",
+    "web3.storage": "^4.4.0",
     "yup": "^0.32.11",
     "zustand": "4.1.1"
   },
   "devDependencies": {
-    "@types/formidable": "^2.0.5",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/formidable": "^2.0.5",
     "@types/howler": "^2.2.7",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
