--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,9 +33,11 @@
     "@types/formidable": "^2.0.5",
     "date-fns": "^2.29.3",
     "ethers": "^5.7.0",
+    "ffmpeg-static": "^5.1.0",
     "formidable": "^2.0.1",
     "howler": "^2.2.3",
     "immer": "^9.0.15",
+    "media-split": "^5.4.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "nft.storage": "^7.0.0",
