change AWS env names for Vercel deployment

--- a/packages/web/.env.sample
+++ b/packages/web/.env.sample
@@ -4,5 +4,5 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somereallysecretsecret
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 WEB3_STORAGE_KEY=
-AWS_ACCESS_ID=
-AWS_SECRET_KEY=
+AWS_S3_ACCESS_ID=
+AWS_S3_SECRET_KEY=
