--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "prebuild": "prisma generate",
+    "prebuild": "yarn && prisma generate",
     "predev": "prisma generate",
     "start": "next start",
     "lint": "next lint",
