--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "@tableland/evm": "^2.0.4",
-    "hardhat": "^2.11.2"
+    "@tableland/evm": "^2.0.4"
   }
 }
