altar creation page

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.171.0",
+    "@aws-sdk/middleware-endpoint": "^3.178.0",
     "@aws-sdk/s3-request-presigner": "^3.173.0",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
